# kernel

./: .gdbinit  .gitignore  .lldbinit  Cargo.toml  README.md  justfile  linker.ld  structs.c
.cargo/: config.toml  riscv64-bare.json  runner.sh
.github/workflows/: build.yml
src/: entry.s  kernelvec.s  kinit.rs  main.rs  pci.rs  plic.s  proc.rs  symbols.rs  symbols.s  trap.rs  vmem.rs  writer.rs
src/alloc/: bitmap.rs  mod.rs
src/allocator/: bitmap.rs  global_impl.rs  mod.rs  tiered.rs
src/drivers/: mod.rs  pci.rs  uart.rs  virtio.rs  virtio_old.rs
src/drivers/virtio/: block.rs  mod.rs  virtqueue.rs
src/riscv/: frame.rs  mod.rs  sbi.rs
src/systems/: pci.rs
src/systems/pci/: ecam.rs  mod.rs  pci_device.rs
src/vmem/: mapper.rs  mod.rs
