[package]
name = "kernel"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[profile.dev]
opt-level = 1

# architecture independent dependencies
[dependencies]
bitflags = "2.9.0"
linked_list_allocator = "0.10.5"
log = "0.4.27"
#packed_struct = { version = "0.10.1", default-features = false }
spin = "0.10.0"
thiserror = { version = "2.0.12", default-features = false }

# right now, we only support RISC-V, but I am open to adding more
[target.'cfg(target_arch = "riscv64")'.dependencies]
# NOTE: STAGED TO BE REMOVED
riscv = { version = "0.13.0", features = ["s-mode"] }

[target.'cfg(target_arch = "riscv64")'.dependencies.fdt]
git = "https://github.com/repnop/fdt.git"
rev = "059bb2383873f8001959456e36ec123228f67642"

[features]
default = [ "fdt_pretty_printing" ]
fdt_pretty_printing = ["fdt/pretty-printing"]
